--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 -->
 <html>
 	<head>
-<<<<<<< HEAD
 		<title>Visinux</title>
-=======
-		<title>github Paradigm Shift by HTML5 UP</title>
->>>>>>> b32ad7e6a5f40c7e5d2f41692b459ac639a0cc8d
+		<title>Origin</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -26,7 +23,7 @@
 					<section class="intro">
 						<header>
 							<h1>Visinux</h1>
-							<p> Another Digital Lab | Drive by Human<a href="https://twitter.com/visijauh">visijauh</a> / <a href="https://visinux.com">visinux.com</a></p>
+							<p> Another Digital Lab | Drive by Human |<a href="https://twitter.com/visijauh">visijauh</a> / <a href="https://visinux.com">visinux.com</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -42,7 +39,7 @@
 							<h2>Selamat Datang</h2>
 						</header>
 						<div class="content">
-							<p><strong>Welcome</strong>clear</p>
+							<p><strong>Welcome</strong> Clear</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
